small changes to improve useabilty, like stop from scroll on mobile devices from left to right

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,6 @@
 html {
   height: 100%;
+  
 }
 
 body {
@@ -91,7 +92,7 @@ body {
     background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/static/img/400dpiLogo.png');
     background-image: -moz-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/static/img/400dpiLogo.png');
     background-image: -ms-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/static/img/400dpiLogo.png');  
-    overflow:auto;
+    /*overflow:auto;*/
     background-repeat: no-repeat;
     background-size: contain;
     -webkit-background-size: contain;
